# 3dDiceRoller

./: .gitignore  CMakeLists.txt  Main.qml  README.md  RegularDice.qml  SideMenu.qml  dice3dcontroller.cpp  dice3dcontroller.h  dicegeometry.cpp  dicegeometry.h  dicemodel.cpp  dicemodel.h  main.cpp  resources.qrc
